[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mqtt-ingest-pipeline"
version = "0.1.3"
description = "Collection of MQTT data transformers for home automation and IoT devices."
authors = [
    { name = "stkr22", email = "stkr22@github.com" }
]
readme = "README.md"
license = "GPL-3.0"
license-files = [
    "LICENSE",
]

keywords = ["mqtt", "iot", "home-automation", "timescaledb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]

requires-python = ">=3.12,<3.13"
dependencies = [
    "aiomqtt~=2.3.0",
    "asyncpg~=0.30.0",
    "sqlmodel~=0.0.22",
    "typer~=0.15.0",
]

[project.urls]
Homepage = "https://github.com/stkr22/mqtt-ingest-pipeline-py"
Repository = "https://github.com/stkr22/mqtt-ingest-pipeline-py"
Documentation = "https://github.com/stkr22/mqtt-ingest-pipeline-py/tree/main/docs"
Issues = "https://github.com/stkr22/mqtt-ingest-pipeline-py/issues"
Changelog = "https://github.com/stkr22/mqtt-ingest-pipeline-py/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff~=0.8.0",
    "mypy~=1.17.0",
    "pytest~=8.4.1",
    "pytest-cov~=6.2.1",
    "pytest-xdist~=3.6.0",
    "coverage[toml]~=7.6.0",
    "commitizen~=4.8.3",
]

[project.scripts]
mqtt-ingest-pipeline = "mqtt_ingest_pipeline.main:app"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",   # pylint
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"src/mqtt_ingest_pipeline/main.py" = ["PLR0913"]  # Allow many arguments for CLI command

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q -n auto"

[tool.coverage.run]
source = ["mqtt_ingest_pipeline"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "scm"
update_changelog_on_bump = true
